--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مركز أمل لليتيم | رعاية - إبداع - أمل</title>
 
+    <!-- رمز الموقع (Favicon) -->
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+
     <!-- خطوط جوجل الحديثة (Cairo) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +32,7 @@
     <header class="main-header">
         <nav class="navbar">
             <div class="logo">
-                <i class="fas fa-heart-pulse"></i>
+                <img src="icon.svg" alt="شعار أمل" style="height: 3rem; width: auto;">
                 <span>أمل<span>اليتيم</span></span>
             </div>
             <ul class="nav-links" id="navLinks">
@@ -146,7 +149,7 @@
         <div class="footer-content">
             <div class="footer-about">
                 <div class="logo">
-                    <i class="fas fa-heart-pulse"></i>
+                    <img src="icon.svg" alt="شعار أمل" style="height: 3rem; width: auto;">
                     <span>أمل<span>اليتيم</span></span>
                 </div>
                 <p>مؤسسة خيرية رائدة تهدف إلى تمكين الأيتام وتوفير حياة كريمة لهم من خلال برامج تنموية ومستدامة.</p>
