--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>مركز أمل لليتيم | رعاية - إبداع - أمل</title>
 
     <!-- رمز الموقع (Favicon) -->
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/icon.svg" type="image/svg+xml">
 
     <!-- خطوط جوجل الحديثة (Cairo) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
     <header class="main-header">
         <nav class="navbar">
             <div class="logo">
-                <img src="icon.svg" alt="شعار أمل" style="height: 3rem; width: auto;">
+                <img src="assets/icon.svg" alt="شعار أمل" style="height: 3rem; width: auto;">
                 <span>أمل<span>اليتيم</span></span>
             </div>
             <ul class="nav-links" id="navLinks">
@@ -69,7 +69,7 @@
             <div class="hero-visual animate-fade">
                 <div class="blob-wrapper">
                     <!-- صورة تجريبية لليتيم (يمكن استبدالها لاحقاً) -->
-                    <img src="hero-image.jpg.png" alt="أطفال يلعبون على الشاطئ" class="hero-img">
+                    <img src="assets/hero-image.png" alt="أطفال يلعبون على الشاطئ" class="hero-img">
                 </div>
             </div>
         </section>
@@ -259,7 +259,7 @@
         <div class="footer-content">
             <div class="footer-about">
                 <div class="logo">
-                    <img src="icon.svg" alt="شعار أمل" style="height: 3rem; width: auto;">
+                    <img src="assets/icon.svg" alt="شعار أمل" style="height: 3rem; width: auto;">
                     <span>أمل<span>اليتيم</span></span>
                 </div>
                 <p>مؤسسة خيرية رائدة تهدف إلى تمكين الأيتام وتوفير حياة كريمة لهم من خلال برامج تنموية ومستدامة.</p>
