--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                         <p>منحة تعليمية</p>
                     </div>
                     <div class="stat-item">
-                        <i class="fas fa-house-chimney-heart"></i>
+                        <i class="fas fa-home"></i>
                         <h3 class="counter" data-target="50">0</h3>
                         <p>بيت آمن</p>
                     </div>
                     <div class="stat-item">
-                        <i class="fas fa-hands-holding-heart"></i>
+                        <i class="fas fa-hand-holding-heart"></i>
                         <h3 class="counter" data-target="2000">0</h3>
                         <p>متبرع نشط</p>
                     </div>
@@ -148,7 +148,7 @@
                     <p>تغطية تكاليف الدراسة والكتب واللوازم المدرسية لضمان مستقبل مشرق.</p>
                     <div class="card-footer">
                         <span class="price">150 ر.س / شهر</span>
-                        <a href="#" class="btn-card">اكفل الآن</a>
+                        <a href="javascript:void(0)" class="btn-card">اكفل الآن</a>
                     </div>
                 </div>
                 <!-- بطاقة كفالة شاملة -->
@@ -158,7 +158,7 @@
                     <p>تغطية كامل احتياجات الطفل من مسكن وغذاء وتعليم ورعاية صحية شاملة.</p>
                     <div class="card-footer">
                         <span class="price">500 ر.س / شهر</span>
-                        <a href="#" class="btn-card">اكفل الآن</a>
+                        <a href="javascript:void(0)" class="btn-card">اكفل الآن</a>
                     </div>
                 </div>
                 <!-- بطاقة كفالة صحية -->
@@ -168,7 +168,7 @@
                     <p>تأمين الفحوصات الدورية والعلاجات اللازمة للأطفال ذوي الاحتياجات الخاصة.</p>
                     <div class="card-footer">
                         <span class="price">200 ر.س / شهر</span>
-                        <a href="#" class="btn-card">اكفل الآن</a>
+                        <a href="javascript:void(0)" class="btn-card">اكفل الآن</a>
                     </div>
                 </div>
             </div>
@@ -208,7 +208,8 @@
                     </div>
                     <form class="contact-form animate-up">
                         <div class="form-group">
-                            <input type="text" placeholder="الاسم الكامل" required>
+                            <input type="text" id="contactName" placeholder="الاسم الكامل" required>
+                            <span class="error-msg"></span>
                         </div>
                         <div class="form-group">
                             <input type="email" placeholder="البريد الإلكتروني" required>
@@ -231,7 +232,18 @@
                 <h3>طلب كفالة</h3>
                 <p>اصنع فرقاً في حياة طفل اليوم</p>
             </div>
-            <form class="sponsor-form">
+            <!-- Success Message Container -->
+            <div id="payment-success" class="success-message">
+                <div class="success-icon"><i class="fas fa-check"></i></div>
+                <h3>شكراً لعطائك!</h3>
+                <p>تم استلام تبرعك بنجاح، أنت الآن تساهم في صنع مستقبل أفضل.</p>
+                <div class="card-footer" style="margin-top: 1.5rem;">
+                    <button class="btn-primary" onclick="window.location.reload()">العودة للرئيسية</button>
+                </div>
+            </div>
+
+            <!-- Payment Form -->
+            <form class="sponsor-form" id="payment-form">
                 <div class="form-group">
                     <label>نوع الكفالة</label>
                     <select id="sponsorshipType">
@@ -240,16 +252,68 @@
                         <option value="health">كفالة صحية (200 ر.س)</option>
                     </select>
                 </div>
-                <div class="form-group">
-                    <input type="text" placeholder="الاسم الكامل" required>
+
+                <div class="form-group phone-group-container">
+                    <select id="countryCode" class="country-select">
+                        <optgroup label="الدول العربية">
+                            <option value="+966">🇸🇦 السعودية (+966)</option>
+                            <option value="+20">🇪🇬 مصر (+20)</option>
+                            <option value="+971">🇦🇪 الإمارات (+971)</option>
+                            <option value="+965">🇰🇼 الكويت (+965)</option>
+                            <option value="+974">🇶🇦 قطر (+974)</option>
+                            <option value="+968">🇴🇲 عمان (+968)</option>
+                            <option value="+973">🇧🇭 البحرين (+973)</option>
+                            <option value="+962">🇯🇴 الأردن (+962)</option>
+                            <option value="+964">🇮🇶 العراق (+964)</option>
+                            <option value="+961">🇱🇧 لبنان (+961)</option>
+                            <option value="+963">🇸🇾 سوريا (+963)</option>
+                            <option value="+967">🇾🇪 اليمن (+967)</option>
+                            <option value="+970">🇵🇸 فلسطين (+970)</option>
+                            <option value="+213">🇩🇿 الجزائر (+213)</option>
+                            <option value="+212">🇲🇦 المغرب (+212)</option>
+                            <option value="+216">🇹🇳 تونس (+216)</option>
+                            <option value="+218">🇱🇾 ليبيا (+218)</option>
+                            <option value="+249">🇸🇩 السودان (+249)</option>
+                            <option value="+222">🇲🇷 موريتانيا (+222)</option>
+                            <option value="+252">🇸🇴 الصومال (+252)</option>
+                            <option value="+253">🇩🇯 جيبوتي (+253)</option>
+                            <option value="+269">🇰🇲 جزر القمر (+269)</option>
+                        </optgroup>
+                        <option value="manual">✏️ إدخال يدوي (دولي)</option>
+                    </select>
+
+                    <div id="manualInputGroup" class="manual-group" style="display: none;">
+                        <span id="dynamicFlag" class="flag-display">🌐</span>
+                        <input type="text" id="manualCodeInput" placeholder="مثال: +1" class="manual-code-input">
+                        <button type="button" id="resetCountry" class="reset-btn" title="العودة للقائمة">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+
+                    <input type="tel" id="sponsorPhone" placeholder="رقم الجوال" required>
+                    <span class="error-msg"></span>
                 </div>
+
                 <div class="form-group">
-                    <input type="tel" placeholder="رقم الجوال" required>
+                    <input type="email" id="sponsorEmail" placeholder="البريد الإلكتروني" required>
+                    <span class="error-msg"></span>
                 </div>
-                <div class="form-group">
-                    <input type="email" placeholder="البريد الإلكتروني" required>
+
+                <div class="payment-grid">
+                    <div class="form-group input-with-icon">
+                        <i class="far fa-calendar-alt"></i>
+                        <input type="text" id="cardExpiry" placeholder="MM/YY" maxlength="5" required>
+                    </div>
+                    <div class="form-group input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="text" id="cardCvc" placeholder="CVV" maxlength="3" required>
+                    </div>
                 </div>
-                <button type="submit" class="btn-primary-large" style="width: 100%;">إتمام الكفالة</button>
+
+                <button type="submit" class="btn-primary-large"
+                    style="width: 100%; display: flex; align-items: center; justify-content: center;">
+                    <span id="btn-text">إتمام الكفالة</span>
+                </button>
             </form>
         </div>
     </div>
