--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مركز أمل لليتيم | رعاية - إبداع - أمل</title>
 
+    <!-- Meta Tags للبروفايل والبحث -->
+    <meta name="description"
+        content="منصة أمل لليتيم - مبادرة خيرية تقنية تهدف لرعاية وتمكين الأيتام من خلال برامج كفالة مبتكرة وتجربة مستخدم عصرية.">
+    <meta name="keywords" content="أيتام, كفالة, تبرع, عمل خيري, أمل لليتيم, مبادرة">
+    <meta name="author" content="Amal Orphan Center">
+
+    <!-- Open Graph / Facebook (لظهور الموقع بشكل جذاب عند مشاركة الرابط) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://amal-orphan.org/">
+    <meta property="og:title" content="مركز أمل لليتيم | رعاية - إبداع - أمل">
+    <meta property="og:description" content="منصة متطورة لكفالة الأيتام وتتبع الأثر الاجتماعي.">
+    <meta property="og:image" content="assets/hero-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="مركز أمل لليتيم">
+    <meta property="twitter:description" content="منصة متطورة لكفالة الأيتام وتتبع الأثر الاجتماعي.">
+
     <!-- رمز الموقع (Favicon) -->
     <link rel="icon" href="assets/icon.svg" type="image/svg+xml">
 
@@ -351,6 +369,12 @@
             <p>جميع الحقوق محفوظة &copy; 2024 مركز أمل لليتيم</p>
         </div>
     </footer>
+
+    <!-- ملف الصوت الخلفي -->
+    <audio id="bgAudio" loop preload="auto">
+        <source src="assets/sounds/background-audio.mp3" type="audio/mpeg">
+        متصفحك لا يدعم تشغيل الملفات الصوتية.
+    </audio>
 
     <!-- ملفات الجافاسكريبت -->
     <script src="script.js"></script>
