--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
                 </div>
 
                 <div class="form-group">
+                    <input type="text" id="sponsorName" placeholder="الاسم الكامل" required>
+                    <span class="error-msg"></span>
+                </div>
+
+                <div class="form-group">
                     <label>نوع الكفالة</label>
                     <select id="sponsorshipType">
                         <option value="education">كفالة تعليمية (150 ر.س)</option>
@@ -317,14 +322,9 @@
                     <span class="error-msg"></span>
                 </div>
 
-                <div class="form-group">
-                    <input type="email" id="sponsorEmail" placeholder="البريد الإلكتروني" required>
-                    <span class="error-msg"></span>
-                </div>
-
-                <div class="form-group">
-                    <input type="text" id="cardHolder" placeholder="اسم صاحب البطاقة" required>
-                    <span class="error-msg"></span>
+                <div class="form-group input-with-icon">
+                    <i class="far fa-user"></i>
+                    <input type="text" id="cardHolder" placeholder="اسم صاحب البطاقة كما يظهر" required>
                 </div>
 
                 <div class="form-group input-with-icon">
