--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="text" id="sponsorName" placeholder="الاسم الكامل" required>
+                    <input type="email" id="sponsorEmail" placeholder="البريد الإلكتروني" required>
                     <span class="error-msg"></span>
                 </div>
 
